<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/absent_settings"
        app:key = "absent_category">

    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/settings_title">

        <Preference
            app:key="set_home_location"
            app:title="@string/set_pick_drop_setting"
            app:summary="@string/set_pick_drop_setting_summary"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/notification_settings">

        <SwitchPreferenceCompat
            app:key="arrived_school_notify"
            app:title="@string/arrived_at_school_notification" />

        <SwitchPreferenceCompat
            app:key="left_school_notify"
            app:title="@string/left_school_notification" />

        <SwitchPreferenceCompat
            app:key="arrived_home_notify"
            app:title="@string/arrived_at_home_notification" />

        <SwitchPreferenceCompat
            app:key="left_home_notify"
            app:title="@string/left_home_notification" />

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/zone_entries"
            app:entryValues="@array/zone_values"
            app:key="near_home"
            app:title="@string/zone_settings"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>



</PreferenceScreen>