<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.creativeapps.schoolbustracker.ui.activity.main.map.MapFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_callDriver"
        android:label="@string/menu_callDriver"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.creativeapps.schoolbustracker.ui.activity.main.settings.SettingsFragment"
        android:label="@string/menu_settings" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.creativeapps.schoolbustracker.ui.activity.main.history.DriverHistoryFragment"
        android:label="@string/menu_history" />


    <fragment
        android:id="@+id/nav_childLog"
        android:name="com.creativeapps.schoolbustracker.ui.activity.main.history.ChildHistoryFragment"
        android:label="@string/menu_childLog" />

    <fragment
        android:id="@+id/nav_shareApp"
        android:label="@string/menu_shareApp"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_about"
        android:label="@string/menu_about"
        android:name="com.creativeapps.schoolbustracker.ui.activity.main.about.AboutFragment"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_logout"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_map" />

</navigation>