<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.creativeapps.schoolbustracker.ui.activity.login.LoginActivity"
    tools:showIn="@layout/activity_login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layoutDirection="ltr">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_mobile_number"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="#8e8e93"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">


            <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="20dp"
                app:ccp_defaultNameCode="BO"/>


            <EditText
                android:id="@+id/PhoneNumberEdt"
                android:inputType="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="@string/phone"
                android:background="@color/transperent"/>
        </LinearLayout>

        <TextView
            android:id="@+id/MobNumberStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorAccent"
            android:gravity="center"/>

        <ProgressBar
            android:id="@+id/MobNumberProgressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            />
    </LinearLayout>

    <View
        android:layout_above="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f1f1f1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="18dp"
        android:background="#f8f8f8"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/NextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/black"
            android:background="@color/transperent"/>


    </LinearLayout>

</RelativeLayout>
